redis-follower-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-follower-network-policy
spec:
  podSelector:
    matchLabels:
      app: redis
      role: follower
      tier: backend
  policyTypes:
  -  Ingress
  -  Egress
  ingress:
    - ports:
      - protocol: TCP
        port: 6379
  egress:
    - ports:
- protocol: TCP
        port: 6379
