redis-guestbook-networkpolicy-nsxt.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: guestbook-network-policy
spec:
  podSelector:
    matchLabels:
      app: guestbook
      tier: frontend 
  policyTypes:
  - Ingress
- Egress
ingress:
  - ports:
    - protocol: TCP
      port: 80
