redis-leader-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-leader-network-policy
spec:
  podSelector:
    matchLabels:
      app: redis
      role: leader
      tier: backend
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - ports:
      - protocol: TCP
        port: 6379
  egress:
   - ports:
     - protocol: TCP
       port: 6379
